--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   charts_flutter: ^0.12.0
   freezed_annotation: ^2.2.0
   dio: ^5.2.1+1
-  syncfusion_flutter_charts: ^21.2.4
+  flutter_map: ^5.0.0
+
 
 dev_dependencies:
   flutter_test:
