--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   freezed_annotation: ^2.2.0
   dio: ^5.2.1+1
   flutter_map: ^5.0.0
+  firebase_crashlytics: ^3.3.3
+  firebase_core: ^2.14.0
+  latlong2: ^0.9.0
+  intl: ^0.17.0
 
 
 dev_dependencies:
