--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "mirai_tracker",
-    "short_name": "mirai_tracker",
+    "name": "Tracker",
+    "short_name": "Tracker",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "Tracker monitoring",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
